slider on index page responsive issue fixed on mobile devices.

--- a/assets/styles/slider.css
+++ b/assets/styles/slider.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 5rem;
+    gap: 2rem;
 }
 
 .slide .sliderStaticContent h2 {
@@ -38,7 +38,6 @@
     width: 500px;
 }
 .swiper-slide {
-    padding: 20px;
     display: flex !important;
     justify-content: start;
     align-items: center;
@@ -47,18 +46,36 @@
 }
 
 .swiper-slide.swiper-slide-active{
+    height: auto;
     background: lightblue;
     border-radius: 10px;
     font-weight: bolder;
     color: black;
+    padding: .5rem;
+
 }
 
 @media screen and (max-width: 768px) {
     .slide {
+        padding: 1rem;
+        min-height: 100%;
         flex-direction: column;
         gap: 2rem;
+        max-width: 100vw;
     }
     .slide .sliderStaticContent h2{
         width: 100%;
+        font-size: 1rem !important;
+    }
+    .slide .sliderStaticContent p{
+        width: 100%;
+    }
+    .swiper{
+        width: 100%;
+    }
+
+    .swiper-slide.swiper-slide-visible.swiper-slide-fully-visible.swiper-slide-active{
+        padding: 1rem;
+        font-size: .8rem;
     }
 }
